footer: fix item alignemnt
ensure last button does not have right margin

--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -3,12 +3,23 @@
 }
 
 .footer-item {
+  display: inline-block;
   width: 50px;
   height: 50px;
   margin: 0 15px 20px 0px;
   transition: 0.2s;
+
+  &:nth-child(5) {
+    margin-right: 0;
+  }
+
+  &:hover {
+    transform: scale(1.05, 1.05);
+  }
+
+  img {
+    width: 100%;
+  }
 }
 
-.footer-item:hover {
-  transform: scale(1.05, 1.05);
 }
